@@ -7,6 +7,7 @@
 ## Details
 - **New**: Added Bezier curve interpolation option to `CPTScatterPlot`.
 - **New**: Added printing support to the OS X hosting view.
+- **New**: Added a plot data label selection delegate method.
 
 
 
